--- a/main.html
+++ b/main.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Job Application Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <form method="post">
+    <label for="name">Name*:</label>
+    <input type="text"  id="name" required><br><br>
+    <label for="email">Email*:</label>
+    <input type="Email"  id="email" required><br><br>
+    <label for="">Gender*:</label>
+    <input type="radio" name="gender">Male
+    <input type="radio" name="gender">Female<br><br>
+    <label for="laptop">Laptop Brands*:</label>
+    <select   id="laptop">
+    <option value="Apple">Apple</option>
+    <option value="Asus">Asus</option>
+    <option value="HP">HP</option>
+   </select><br><br>
+    <label for="age">Age*:</label>
+    <input type="Number"  id="age" required><br><br>
+    <label for="dob">Date of Birth*:</label>
+    <input type="date" id="dob" required><br><br>
+    <label for="password">Password*:</label>
+    <input type="Password" id="password" required><br><br>
+    <label for="portfolio">Portfolio URL*</label>
+    <input type="URL"  id="portfolio"><br><br>
+     <button type="submit">submit</button>    
+    </form>
 </body>
-
 </html>
