--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
     <label for="email">Email*:</label>
     <input type="Email"  id="email" required><br><br>
     <label for="">Gender*:</label>
-    <input type="radio" name="gender">Male
-    <input type="radio" name="gender">Female<br><br>
+    <input type="radio" name="gender" required>Male
+    <input type="radio" name="gender" required>Female<br><br>
     <label for="laptop">Laptop Brands*:</label>
     <select   id="laptop">
     <option value="Apple">Apple</option>
